added project to profile

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 <p>Website finished completed for client</p>
             </section>
             <section class="work">
-                <header>Cost Analysis</header>
-                <img src="./assets/images/Cost Analysis.jpg" alt="Analaysis Template" />
-                <p>Cost Analysis Management System  for tracked budget</p>
+                <header>Nutricipe</header>
+                <a href="https://laceya25.github.io/Nutricipe/"></a><img src="./assets/images/Nutricipe.png" alt="Website Page" />
+                <p>Recipe for customers</p>
             </section>
           <section class="work">
                 <header>E commerce</header>
